fix: service proto
